# legion-keyboard-custom

./: .gitignore  README.md  TODO.md  build_legion_lite.ps1  package_release.ps1  settings.json  setup_graphify.ps1
.github/workflows/: compile-rust.yml  release-rust.yml
app/: Cargo.toml  build.rs
app/src/: cli.rs  console.rs  enums.rs  persist.rs
app/src/gui/: mod.rs  modals.rs
app/src/manager/: mod.rs  profile.rs
app/src/manager/effects/: aesthetic.rs  ambient.rs  apm_pulse.rs  audio.rs  battery.rs  biorhythms.rs  collider.rs  custom.rs  cyber.rs  default_ui.rs  emergency.rs  fluid_flow.rs  focus_lamp.rs  frequency_audio.rs  ghost_keys.rs  glitch.rs  gravity_well.rs  health_trace.rs  heartbeat.rs  lightning.rs  matrix.rs  mental_flow.rs  mod.rs  monitor.rs  morse.rs  nature.rs  network.rs  pomodoro.rs  prism_shift.rs  pulse_static.rs  ripple.rs  sonar_ping.rs  system_monitor.rs  vhs.rs  wpm.rs
driver/src/: lib.rs
legion-stealth/: index.html  vite.config.js
legion-stealth-gui/: vite.config.js
legion-stealth-gui/src/: App.jsx  index.css
legion-stealth-gui/src/components/: EffectPanel.jsx  KeyboardVisualizer.jsx  Sidebar.jsx  StatusBar.jsx  ZoneColorPicker.jsx
legion-stealth-gui/src/hooks/: useTauri.js
legion-stealth/src/: main.js  style.css
legion-stealth/src-tauri/: Cargo.toml
legion-stealth/src-tauri/src/: main.rs
